Finished Hinge Hole improvement

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-delivery-docket/duraform-delivery-docket.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-delivery-docket/duraform-delivery-docket.component.html
@@ -12,6 +12,9 @@
       >
         C.B.D
       </span>
+      <!-- <span class="cbd-tag" *ngIf="deliveryDocket.useBlackBoard">
+        BLACK BACK
+      </span> -->
     </div>
     <div class="header__form-details">
       <div class="barcode">
