--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-three/duraform-order-step-three.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-three/duraform-order-step-three.component.html
@@ -355,6 +355,12 @@
                 </td>
               </tr>
               <tr>
+                <td class="text-left">Use Black Board</td>
+                <td>
+                  {{ duraformEnquiry.useBlackBoard ? "YES" : "NO" }}
+                </td>
+              </tr>
+              <tr>
                 <td class="text-left">Edge Profile</td>
                 <td>
                   {{ duraformEnquiry.duraformEdgeProfile.name }}
