--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/primary-left-nav/primary-left-nav.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/primary-left-nav/primary-left-nav.component.html
@@ -171,7 +171,7 @@
       </li>
       <li
         class="nav__item"
-        *ngIf="auth.isInRole(role[role.Sale])"
+        *ngIf="auth.isInRole(role[role.Admin])"
         (click)="layoutService.toggleLeftNav(false)"
       >
         <a [appClassToggle]="'active'">
