--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-accessories-box/duraform-accessories-box.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-accessories-box/duraform-accessories-box.component.html
@@ -1,7 +1,7 @@
 <div class="options-box">
   <app-box [showHeading]="false">
     <div class="row">
-      <div class="col-1-3">
+      <div class="col-1-2">
         <div class="form__group">
           <label class="form__label">Edge Profile</label>
           <app-edge-profile-selector
@@ -11,7 +11,7 @@
           ></app-edge-profile-selector>
         </div>
       </div>
-      <div class="col-1-3">
+      <div class="col-1-2">
         <div class="form__group">
           <label class="form__label">Arch Style</label>
           <app-arch-selector
@@ -21,7 +21,9 @@
           ></app-arch-selector>
         </div>
       </div>
-      <div class="col-1-3">
+    </div>
+    <div class="row">
+      <div class="col-1-2">
         <div class="form__group">
           <label class="form__label">Hinge Hole Type</label>
           <app-select-menu
@@ -33,6 +35,18 @@
             [nullText]="'No Hinge Hole'"
             [nullOnLabel]="true"
             (afterSet)="onSelectHingeHoleType()"
+          ></app-select-menu>
+        </div>
+      </div>
+      <div class="col-1-2">
+        <div class="form__group">
+          <label class="form__label">Use Black Board</label>
+          <app-select-menu
+            [control]="formGroup.get('useBlackBoard')"
+            [values]="blackBoardOpts"
+            [valueKey]="'value'"
+            [valueDisplay]="'text'"
+            (afterSet)="onSelectBlackBoard()"
           ></app-select-menu>
         </div>
       </div>
