--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/hinge-hole-selector/hinge-hole-selector.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/hinge-hole-selector/hinge-hole-selector.component.html
@@ -1,184 +1,67 @@
 <div class="hinge-hole-selector">
-  <div class="control-box">
+  <div class="form__input-btn">
+    <button
+      [disabled]="!selectedStyle"
+      type="button"
+      class="btn btn--primary"
+      style="padding: 0.5rem 1rem"
+      (click)="showStyleList = true; showOptionForm = false"
+    >
+      <i class="fa fa-edit"></i>
+    </button>
     <input
       #mainInput
       type="text"
       class="form__control"
       readonly
       (keydown)="onMainInputTab($event)"
-      (click)="onInputClick()"
+      (click)="onInputFocus()"
       (focus)="onInputFocus()"
     />
   </div>
-  <div class="absolute-container" *ngIf="showOption">
-    <div class="form-box">
-      <div class="form__group">
-        <label class="form__label">Hinge Hole</label>
-        <app-select-menu
-          [control]="styleFormControl"
-          [values]="asset.hingeHoleStyles"
-          [valueKey]="'id'"
-          [valueDisplay]="'name'"
-          [allowNull]="true"
-          [nullText]="'No Hinge Hole'"
-          [nullOnLabel]="true"
-          [isTabIgnored]="true"
-          (afterSet)="onSelectOption()"
-        ></app-select-menu>
-      </div>
-      <div class="form__group" *ngIf="formGroup.get('hingeHole')">
-        <div class="form__group">
-          <label class="form__label">Quantity</label>
-          <app-select-menu
-            [control]="quantity"
-            [values]="quantities"
-            [valueKey]="'value'"
-            [valueDisplay]="'text'"
-            (afterSet)="onSelectQuantity()"
-          ></app-select-menu>
-        </div>
-        <div class="row" [formGroup]="formGroup.get('hingeHole')">
-          <div
-            [ngClass]="{
-              'col-1-1': quantity.value === 1,
-              'col-1-2': quantity.value === 2,
-              'col-1-3': quantity.value === 3,
-              'col-1-4': quantity.value === 4,
-              'col-1-5': quantity.value === 5
-            }"
-          >
-            <label class="form__label">Top</label>
-            <input
-              #topInput
-              type="text"
-              class="form__control tab-ignore"
-              currencyMask
-              appSelectOnFocus
-              formControlName="top"
-              [options]="{
-                align: 'center',
-                allowZero: false,
-                precision: '0',
-                decimal: '',
-                prefix: '',
-                thousands: ''
-              }"
-              (blur)="onSizeBlur(top)"
-              (keydown)="onTopTab($event)"
-            />
-          </div>
-          <div
-            *ngIf="quantity.value >= 3"
-            [ngClass]="{
-              'col-1-3': quantity.value === 3,
-              'col-1-4': quantity.value === 4,
-              'col-1-5': quantity.value === 5
-            }"
-          >
-            <label class="form__label">T1</label>
-            <input
-              #topCenterInput
-              type="text"
-              class="form__control tab-ignore"
-              currencyMask
-              appSelectOnFocus
-              formControlName="topCenter"
-              [options]="{
-                align: 'center',
-                allowZero: false,
-                precision: '0',
-                decimal: '',
-                prefix: '',
-                thousands: ''
-              }"
-              (blur)="onSizeBlur(topCenter)"
-              (keydown)="onTopCenterTab($event)"
-            />
-          </div>
-          <div
-            *ngIf="quantity.value >= 5"
-            [ngClass]="{
-              'col-1-5': quantity.value === 5
-            }"
-          >
-            <label class="form__label">C1</label>
-            <input
-              #middleOneInput
-              type="text"
-              class="form__control tab-ignore"
-              currencyMask
-              appSelectOnFocus
-              formControlName="middleOne"
-              [options]="{
-                align: 'center',
-                allowZero: false,
-                precision: '0',
-                decimal: '',
-                prefix: '',
-                thousands: ''
-              }"
-              (blur)="onSizeBlur(middleOne)"
-              (keydown)="onMiddleOneTab($event)"
-            />
-          </div>
-          <div
-            *ngIf="quantity.value >= 4"
-            [ngClass]="{
-              'col-1-4': quantity.value === 4,
-              'col-1-5': quantity.value === 5
-            }"
-          >
-            <label class="form__label">B2</label>
-            <input
-              #bottomCenterInput
-              type="text"
-              class="form__control tab-ignore"
-              currencyMask
-              appSelectOnFocus
-              formControlName="bottomCenter"
-              [options]="{
-                align: 'center',
-                allowZero: false,
-                precision: '0',
-                decimal: '',
-                prefix: '',
-                thousands: ''
-              }"
-              (blur)="onSizeBlur(bottomCenter)"
-              (keydown)="onBottomCenterTab($event)"
-            />
-          </div>
-          <div
-            *ngIf="quantity.value >= 2"
-            [ngClass]="{
-              'col-1-2': quantity.value === 2,
-              'col-1-3': quantity.value === 3,
-              'col-1-4': quantity.value === 4,
-              'col-1-5': quantity.value === 5
-            }"
-          >
-            <label class="form__label">Bottom</label>
-            <input
-              #bottomInput
-              type="text"
-              class="form__control tab-ignore"
-              currencyMask
-              appSelectOnFocus
-              formControlName="bottom"
-              [options]="{
-                align: 'center',
-                allowZero: false,
-                precision: '0',
-                decimal: '',
-                prefix: '',
-                thousands: ''
-              }"
-              (blur)="onSizeBlur(bottom)"
-              (keydown)="onBottomTab($event)"
-            />
-          </div>
-        </div>
-      </div>
+  <div class="container" [hidden]="!showStyleList || showOptionForm">
+    <ul class="type-list">
+      <li *ngIf="selectedStyle" (click)="onSelectOption(null)">
+        No Hinge Hole
+      </li>
+      <li
+        *ngFor="let style of asset.hingeHoleStyles"
+        (click)="onSelectOption(style)"
+      >
+        {{ style.name }}
+      </li>
+    </ul>
+  </div>
+  <div
+    class="container"
+    *ngIf="selectedStyle"
+    [hidden]="!showOptionForm || showStyleList"
+  >
+    <div class="option-form">
+      <app-hinge-hole-option-side-form
+        #optionForm
+        *ngIf="selectedStyle.id === styleEnum.Side"
+        [formGroup]="formGroup"
+        (valueChange)="onUpdateMainInput($event)"
+      ></app-hinge-hole-option-side-form>
+      <app-hinge-hole-option-draw-form
+        #optionForm
+        *ngIf="selectedStyle.id === styleEnum.Draw"
+        [formGroup]="formGroup"
+        (valueChange)="onUpdateMainInput($event)"
+      ></app-hinge-hole-option-draw-form>
+      <app-hinge-hole-option-corner-door-form
+        #optionForm
+        *ngIf="selectedStyle.id === styleEnum.CornerDoor"
+        [formGroup]="formGroup"
+        (valueChange)="onUpdateMainInput($event)"
+      ></app-hinge-hole-option-corner-door-form>
+      <app-hinge-hole-option-corner-blank-form
+        #optionForm
+        *ngIf="selectedStyle.id === styleEnum.CornerBlank"
+        [formGroup]="formGroup"
+        (valueChange)="onUpdateMainInput($event)"
+      ></app-hinge-hole-option-corner-blank-form>
     </div>
   </div>
 </div>
