--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_delivery-docket-duraform.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_delivery-docket-duraform.scss
@@ -48,6 +48,10 @@
         border-radius: 10px;
         padding: 10px 30px;
 
+        &:not(:first-child) {
+          margin-left: 10px;
+        }
+
         @media print {
           font-size: 55px;
           padding: 5px 15px;
