- Add daily production report - Fixed end panel price calculation per shield - Fixed duration on order list page - Add created date column on order list page

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/primary-left-nav/primary-left-nav.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/primary-left-nav/primary-left-nav.component.html
@@ -160,6 +160,12 @@
                 </a>
               </li>
               <li (click)="layoutService.toggleLeftNav(true)">
+                <a [routerLink]="['/dashboard/reports/daily-production']">
+                  <i class="fa fa-cogs text-green" aria-hidden="true"></i>
+                  Daily Production
+                </a>
+              </li>
+              <li (click)="layoutService.toggleLeftNav(true)">
                 <a [routerLink]="['/dashboard/reports/monthly-tally']">
                   <i class="fa fa-bar-chart text-blue" aria-hidden="true"></i>
                   Tally Report
