--- a/JanperCab/5-JanperCab/ClientApp/src/app/pages/duraform-order-list-page/duraform-order-list-page.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/pages/duraform-order-list-page/duraform-order-list-page.component.html
@@ -180,7 +180,7 @@
             Duration
           </th>
           <th style="width: 15rem">Status</th>
-          <th style="width: 15rem"></th>
+          <th style="width: 15rem">Created At</th>
         </tr>
       </thead>
       <tbody *ngIf="!isLoading && itemList.items.length === 0">
@@ -209,12 +209,16 @@
           </td>
           <td (click)="onSelectOrder(order.id)">{{ order.deliveryNote }}</td>
           <td (click)="onSelectOrder(order.id)">
-            {{ order.hasBeenInvoiced ? "Complete" : order.timeInSystem }}
+            {{
+              order.hasBeenInvoiced ? "Complete" : order.daysInSystem + " days"
+            }}
           </td>
           <td (click)="onSelectOrder(order.id)">
             {{ order.statusDescription }}
           </td>
-          <td></td>
+          <td>
+            {{ order.createdDate | date: "dd/MM/yyyy hh:mm" }}
+          </td>
         </tr>
       </tbody>
     </table>
