--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
@@ -61,6 +61,7 @@
 @import "./3-component/packing-label-pdf";
 @import "./3-component/value-confirm-dialog";
 @import "./3-component/cash-payment-maker";
+@import "./3-component/daily-production-report";
 @import "./4-layout/grid";
 @import "./4-layout/primary-layout";
 @import "./5-page/duraform-page";
