Improve order list

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/latest-items/latest-items.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/latest-items/latest-items.component.html
@@ -1,5 +1,5 @@
 <div class="latest-items">
-  <div class="tab scrollable" appTab style="height: 100%;">
+  <div class="tab scrollable" appTab style="height: 100%">
     <ul class="tab__headers">
       <li class="header active">Duraform Drafts</li>
       <li class="header">Janper Edge Drafts</li>
@@ -7,14 +7,10 @@
     </ul>
     <ul class="tab__pages">
       <li class="page active">
-        <app-duraform-draft-list></app-duraform-draft-list>
+        <app-draft-list></app-draft-list>
       </li>
-      <li class="page">
-        Janper Edge Drafts
-      </li>
-      <li class="page">
-        Flatpack Drafts
-      </li>
+      <li class="page">Janper Edge Drafts</li>
+      <li class="page">Flatpack Drafts</li>
     </ul>
   </div>
 </div>
