--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/draft-list/draft-list.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/draft-list/draft-list.component.html
@@ -3,21 +3,32 @@
     <thead>
       <tr>
         <th style="width: 15rem">Created At</th>
+        <th style="width: 7rem">Type</th>
         <th>Description</th>
         <th style="width: 15rem">Last Updated</th>
+        <th class="text-right" style="width: 15rem">Total Price</th>
         <th style="width: 1rem"></th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let item of drafts" (click)="onItemClick(item)">
         <td>{{ item.createdDate | date: "dd/MM/yyyy HH:mm" }}</td>
-        <td>{{ item.description }}</td>
+        <td>
+          {{ item.jobType }}
+        </td>
+        <td>
+          {{ item.customerReference }} | {{ item.doorType }}
+          {{ item.doorColour }}
+        </td>
         <td>
           {{
             item.lastEditted == null
               ? "--"
               : (item.lastEditted | date: "dd/MM/yyyy HH:mm")
           }}
+        </td>
+        <td class="text-right">
+          {{ item.totalPrice | currency }}
         </td>
         <td class="text-center">
           <button type="button" class="btn btn--sm btn--secondary">
