--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/primary-left-nav/primary-left-nav.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/primary-left-nav/primary-left-nav.component.html
@@ -42,12 +42,23 @@
       <li
         class="nav__item"
         *ngIf="auth.isInRole(role.Distributor) || auth.isInRole(role.Sale)"
+        (click)="layoutService.toggleLeftNav(false)"
       >
-        <a [routerLink]="['/dashboard/customers']">
+        <a [appClassToggle]="'active'">
           <div class="nav__item__icon text-purple">
             <i class="fa fa-address-book" aria-hidden="true"></i>
           </div>
-          <div class="nav__item__text">Customers</div>
+          <div class="nav__item__text">
+            Customer
+            <ul class="nav__item__sub-menu">
+              <li>
+                <a [routerLink]="['/dashboard/customers']">
+                  <i class="fa fa-list text-green" aria-hidden="true"></i>
+                  Customer List
+                </a>
+              </li>
+            </ul>
+          </div>
         </a>
       </li>
       <li
@@ -61,10 +72,10 @@
       >
         <a [appClassToggle]="'active'">
           <div class="nav__item__icon text-orange">
-            <i class="fa fa-table"></i>
+            <i class="fa fa-shopping-bag" aria-hidden="true"></i>
           </div>
           <div class="nav__item__text">
-            Duraform Doors
+            Sales
             <ul class="nav__item__sub-menu">
               <li>
                 <a [routerLink]="['/dashboard/duraform']">
@@ -85,7 +96,7 @@
                 </a>
               </li>
               <li>
-                <a [routerLink]="['/dashboard/duraform/orders']">
+                <a [routerLink]="['/dashboard/orders']">
                   <i class="fa fa-tasks text-purple" aria-hidden="true"></i>
                   Order List
                 </a>
